# vigo

./: .gitignore  ANALYSIS.md  Cargo.toml  README.md  ROADMAP.md  build.rs  cbindgen.toml
benches/: benchmark.rs  vs_uvie_rs.rs  vs_vi_rs.rs
benches/vs_unikey/: CMakeLists.txt  bench.cpp
fcitx5-addon/: CMakeLists.txt  install.sh
fcitx5-addon/data/: vigo-addon.conf  vigo.conf
fcitx5-addon/src/: vigo.cpp
include/: vigo.h
src/: abbreviation.rs  action.rs  buffer.rs  codeswitching.rs  definitions.rs  engine.rs  fast_engine.rs  ffi.rs  lib.rs  main.rs  prediction.rs  repl.rs  smart_engine.rs  syllable.rs  syllable_engine.rs  tables.rs  tone.rs  transform.rs  tui.rs  validation.rs
